<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级助理</string>
    <string name="action_settings">Settings</string>
    <string name="menutest">选择声音</string>
    <string name="hello_world">Hello world!</string>
    <string name="doule">逗乐</string>
       <string name="header">2048</string>
    <string name="game">游戏</string>
        <string name="new_game">New Game</string>
   <string name="facebook">试试</string>
   
   <string name="myspace">试试</string>
   <string name="google">试试</string>
   
   <string name="linkedin">试试</string>
   <string name="twitter">试试</string>
   <string name="wordpress">试试</string>
   <string name="start_app">你好</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now...</string>
    <string name="endless">"Endless" Mode</string>
    <!-- 请替换成在语音云官网申请的appid -->
        <string name="menu_settings">Settings</string>
    <string name="app_id">5614cc8f</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”&#8230;</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
	<string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t有什么好吃的?\n\t上海外滩有哪些酒店?\n\n\t更多语义请登录：\n\thttp://osp.voicecloud.cn/ \n\t配置您的专属语义吧!</string>
    	 <string-array name="welcome_tips">
         <item>你好，我是小智</item>
         <item>我是小智，你最近可好</item>
         <item>主人你好</item>
     </string-array>
    <!-- 听写 -->
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    
    <!-- 合成 -->
    <string-array name="voicer_cloud_entries">
       	<item>小燕</item>
		<item>小宇</item>
		<item>凯瑟琳</item>
		<item>亨利</item>
		<item>玛丽</item>
		<item>小研</item>
		<item>小琪</item>
		<item>小峰</item>
		<item>小梅</item>
		<item>小莉</item>
		<item>小蓉</item>
		<item>小芸</item>
		<item>小坤</item>
		<item>小强 </item>
		<item>小莹</item>
		<item>小新</item>
		<item>楠楠</item>
		<item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
		<item>xiaoyan</item>
		<item>xiaoyu</item>
		<item>catherine</item>
		<item>henry</item>
		<item>vimary</item>
		<item>vixy</item>
		<item>xiaoqi</item>
		<item>vixf</item>
		<item>xiaomei</item>
		<item>xiaolin</item>
		<item>xiaorong</item>
		<item>xiaoqian</item>
		<item>xiaokun</item>
		<item>xiaoqiang</item>
		<item>vixying</item>
		<item>xiaoxin</item>
		<item>nannan</item>
		<item>vils</item>
    </string-array>
     <string-array name="voicer_local_entries">
       	<item>小燕</item>
		<item>小峰</item>
    </string-array>
    <string-array name="voicer_local_values">
		<item>xiaoyan</item>
		<item>xiaofeng</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string
		name="tts_toast_format"
		formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>

    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>   
    
    <!-- 唤醒 -->
    <string name="example_explain_wake">唤醒是指通过说出特定的唤醒词来唤醒处于休眠状态下的设备，又分为唤醒和唤醒+识别。</string>
    <string name="wake_demo_hint">请点击“开始唤醒”后读出您资源所带的唤醒词（本示例为“讯飞语音”），当引擎计算得分大于您设置的门限值时，即可进行唤醒。</string>
    <string name="wake_enroll_demo_hint">请点击“开始注册”后读出您想要说的唤醒词即可，需要注册三次</string>
    <string name="oneshot_demo_hint">请点击“唤醒+识别”后读出您资源所带的唤醒词（本示例为“讯飞语音”）+语法中指定的识别对象（本示例为“张三|李四|张海洋”，本地语法定义详见demo工程的asset/wake.bnf文件），当引擎计算得分大于您设置的门限值时，即可进行唤醒+识别。</string>
    <string name="default_wake_resource_hint">（默认资源中唤醒词：讯飞语音、讯飞语点）</string>
</resources>
